[workspace]
resolver = "2"

members = [
    "crates/kanari",
    "crates/kanari-types",
    "crates/kanari-config",
    "frameworks/framework-builder",
    "frameworks/framework-release",
    "frameworks/framework-types",
    "frameworks/kanari-library", 
    "crates/kanari-open-rpc-spec-builder", 
    "crates/kanari-rpc-api", 
    "crates/kanari-open-rpc-spec", 
    "crates/kanari-open-rpc", 
    "crates/kanari-db",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Kanari Contributors <opensource@kanari.site>"]
edition = "2024"
homepage = "https://kanari.site"
license = "Apache-2.0"
publish = false
repository = "https://github.com/kanari-network/kanari-sdk"
rust-version = "1.88.0"
version = "0.0.1"

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio-stream = "0.1.17"

anyhow = "1.0.76"
clap = { version = "4.5.13", features = ["derive", "env"] }
once_cell = { version = "1.17.1" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
include_dir = { version = "0.6.2" }
bcs = { version = "0.1.3" }

rocksdb = { version = "0.22.0" }
serde_bytes = "0.11.17"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_yaml = "0.9"
serde_with = { version = "2.1.0", features = ["hex", "base64"] }
hex = "0.4.3"
bitcoin = { version = "0.32.6", features = ["serde"] }
prometheus = "0.13.3"
dirs = "5.0.1"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
diesel = { version = "2.2.12", features = ["sqlite", "bundled"] }
opendal = { version = "0.50.2", features = ["services-fs", "services-gcs"] }
dirs-next = "2.0.0"
codespan-reporting = "0.11.1"
itertools = "0.13.0"
schemars = { version = "0.8.22", features = ["either"] }
versions = "4.1.0"

kanari = { path = "crates/kanari" }
kanari-types = { path = "crates/kanari-types" }
kanari-config = { path = "crates/kanari-config" }
framework-builder = { path = "frameworks/framework-builder" }
framework-release = { path = "frameworks/framework-release" }
framework-types = { path = "frameworks/framework-types" }
kanari-db = { path = "crates/kanari-db" }

rand = { version = "0.8.5" }
sha2 = "0.10.9"
fastcrypto = { git = "https://github.com/kanari-network/fastcrypto.git", branch = "main" }
fastcrypto-zkp = { git = "https://github.com/kanari-network/fastcrypto.git", branch = "main" }

rooch-rpc-api = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-key = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-anomalies = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-store = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-indexer = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-types = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-open-rpc-macros = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-open-rpc-spec-builder = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }

# move rooch
move-stdlib = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-stdlib = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-framework = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
bitcoin-move = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
rooch-nursery = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }

smt = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-types = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-store = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-common = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
timeout-join-handler = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-verifier = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
raw-store = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
metrics = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-config = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-wasm = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-object-runtime = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-compiler = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-eventbus = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
accumulator = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
moveos-gas-profiling = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }

# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
# BEGIN MOVE DEPENDENCIES
move-abigen = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-binary-format = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-bytecode-verifier = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-bytecode-utils = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-cli = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-command-line-common = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-compiler = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-core-types = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-coverage = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-disassembler = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-docgen = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-errmapgen = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-ir-compiler = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-model = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-package = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-prover = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-prover-boogie-backend = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-stackless-bytecode = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-prover-test-utils = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-resource-viewer = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }

move-symbol-pool = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-transactional-test-runner = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-unit-test = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0", features = [
    "table-extension",
] }
move-vm-runtime = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0", features = [
    "stacktrace",
    "debugging",
    "testing",
] }
move-vm-test-utils = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0", features = [
    "table-extension",
] }
move-vm-types = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-bytecode-source-map = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" }
move-ir-types = { git = "https://github.com/rooch-network/rooch.git", rev = "13f4dc0" } # END MOVE DEPENDENCIES


[profile.release]
# enable overflow checks won't affect performance much, branch prediction will handle it well
overflow-checks = true
# enable link-time optimization, which can significantly improve perf but won't increase compile time much
# thin LTO is enough for us:
# (https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html)
lto = "thin"
codegen-units = 1 # Help to achieve a better result with lto

[profile.bench]
inherits = "release"
#debug = true

[profile.optdev]
inherits = "release"
lto = "off"
codegen-units = 16

# This profile is used for CI
[profile.optci]
inherits = "dev"
# actually, incremental compilation is disabled already for release profile,
# but we want to make it explicit.
incremental = false