[package]
name = "kanari-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.0"
bincode = "1.3"
libp2p = { version = "0.53", features = [
    "async-std", 
    "dns", 
    "identify", 
    "kad", 
    "gossipsub", 
    "mdns", 
    "noise", 
    "ping", 
    "tcp", 
    "yamux",
    "macros",
    "request-response"
] }
# Add kanari-types dependency
kanari-types = { path = "../kanari-types" }
kanari-config = { path = "../kanari-config" }
