[package]
name = "kanari-rpc-api"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
thiserror = { workspace = true }
schemars = { workspace = true }
bitcoin = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
move-binary-format = { workspace = true }

moveos-types = { workspace = true }
accumulator = { workspace = true }

kanari-types = { workspace = true }
rooch-types = { workspace = true }
kanari-open-rpc = { path = "../kanari-open-rpc" }
rooch-open-rpc-macros = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["rooch-open-rpc"]