[package]
name = "kanari-types"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rooch-types = { workspace = true }
fastcrypto = { workspace = true, features = ["copy_key"] }
sha2 = { workspace = true }
move-core-types = { workspace = true }
move-vm-types = { workspace = true }
move-command-line-common = { workspace = true }
move-binary-format = { workspace = true }
move-resource-viewer = { workspace = true }
moveos-types = { workspace = true }
framework-builder = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    "fastcrypto",
    "move-binary-format",
    "move-command-line-common",
    "move-resource-viewer",
    "move-vm-types",
]
