[package]
name = "kanari"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "kari"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
#rooch cryptography - temporarily disabled to avoid build issues
rooch-key.workspace = true
rooch-anomalies.workspace = true
rooch-store.workspace = true
rooch-indexer.workspace = true
rooch-types.workspace = true
kanari-config.workspace = true
kanari-types.workspace = true
kanari-db.workspace = true
prometheus.workspace = true
moveos-types.workspace = true
hex = "0.4"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }


[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }