[package]
name = "framework-builder"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
bcs = { workspace = true }
codespan-reporting = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }

move-binary-format = { workspace = true }
move-cli = { workspace = true }
move-core-types = { workspace = true }
move-package = { workspace = true }
move-errmapgen = { workspace = true }
move-docgen = { workspace = true }
move-model = { workspace = true }

moveos-types = { workspace = true }
moveos-verifier = { workspace = true }
moveos-compiler = { workspace = true }

framework-types = { workspace = true }